--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
+    "html-react-parser": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
