--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@trendyol-js/react-carousel": "^3.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
     "html-react-parser": "^3.0.1",
