--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@trendyol-js/react-carousel": "^3.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
+    "dotenv": "^16.0.1",
     "html-react-parser": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
